<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textColor="@color/font_color"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/font_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Upcoming..."
        android:textColor="@color/font_color"
        android:textSize="19sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline">

    </TextView>

    <TextView
        android:id="@+id/txtUpcomingMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/font_color"
        android:textSize="19sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUpcomingMessage">

        <Button
            android:id="@+id/btnMonday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFEB3B"
            android:onClick="showTimeTable"
            android:tag="Monday"
            android:text="@string/monday"
            android:textColor="@color/font_color"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:backgroundTint="#FFEB3B" />

        <Button
            android:id="@+id/btnTuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#FFEB3B"
            android:onClick="showTimeTable"
            android:tag="Tuesday"
            android:text="@string/tuesday"
            android:textColor="@color/font_color"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:backgroundTint="#FFEB3B" />

        <Button
            android:id="@+id/btnWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#FFEB3B"
            android:onClick="showTimeTable"
            android:tag="Wednesday"
            android:text="@string/wednesday"
            android:textColor="@color/font_color"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:backgroundTint="#FFEB3B" />

        <Button
            android:id="@+id/btnThursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#FFEB3B"
            android:onClick="showTimeTable"
            android:tag="Thursday"
            android:text="@string/thursday"
            android:textColor="@color/font_color"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:backgroundTint="#FFEB3B" />

        <Button
            android:id="@+id/btnFriday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#FFEB3B"
            android:onClick="showTimeTable"
            android:tag="Friday"
            android:text="@string/friday"
            android:textColor="@color/font_color"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:backgroundTint="#FFEB3B" />

        <Button
            android:id="@+id/btnSaturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#FFEB3B"
            android:onClick="showTimeTable"
            android:tag="Saturday"
            android:text="@string/saturday"
            android:textColor="@color/font_color"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:backgroundTint="#FFEB3B" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>